--- a/framework-res/res/values/public.xml
+++ b/framework-res/res/values/public.xml
@@ -2246,6 +2246,8 @@
     <public type="id" name="websearch" id="0x010203ed" />
     <public type="id" name="find_prev" id="0x010203ee" />
     <public type="id" name="find_next" id="0x010203ef" />
+    <public type="id" name="fontChange" id="0x010203f1" />
+    <public type="id" name="themeChange" id="0x010203f2" />
     <public type="style" name="Animation" id="0x01030000" />
     <public type="style" name="Animation.Activity" id="0x01030001" />
     <public type="style" name="Animation.Dialog" id="0x01030002" />
@@ -8936,4 +8938,5 @@
     <public type="^attr-private" name="neverEncrypt" id="0x011600af" />
     <public type="^attr-private" name="cantSaveState" id="0x011600b0" />
     <public type="^attr-private" name="primaryUserOnly" id="0x011600b1" />
+    <public type="^attr-private" name="needAccessControl" id="0x011600b2" />
 </resources>
